[package]
name = "comet"
authors = ["Guillaume Bour <contact@guillaumebour.fr>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap= {version = "3.0.10", features = ["cargo"] }
serialport = "4.0.1"
chrono = {version = "0.4.19", features = ["serde"]}
hex = "0.4.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
termion = "1.5.6"
question = "0.2.2"
cli-table = "0.4"